# svelte-dotnet-samples

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  nuget2config.json  package.json
src/: BUILD.bazel  HomeController.cs  Program.cs  README.md  Startup.cs  index.html
src/greeting/: BUILD.bazel  Greeting.svelte  main.js
