load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_binary")

core_binary(
    name = "server.exe",
    srcs = glob([
        "**/*.cs"
    ]),
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:Microsoft.AspNetCore.App",
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:libraryset"
    ],
    data = [
      ":index.html",
      "//src/greeting:bundle_prod"
    ]
)